--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,7 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 application.title=Exploration
 application.vendor=julh
 build.classes.dir=${build.dir}/classes
@@ -18,17 +22,22 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/MRESim_2.2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.commons-math3-3.4.1.jar=lib\\commons-math3-3.4.1.jar
 file.reference.jcommon-1.0.17.jar=lib/jcommon-1.0.17.jar
 file.reference.jfreechart-1.0.14.jar=lib/jfreechart-1.0.14.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcommon-1.0.17.jar}:\
-    ${file.reference.jfreechart-1.0.14.jar}
+    ${file.reference.jfreechart-1.0.14.jar}:\
+    ${file.reference.commons-math3-3.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -53,6 +62,7 @@ jnlp.signed=false
 main.class=gui.MainGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
