--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /dist/
 /build/
 /nbproject/private/
+config/lastEnvironment.png
+config/lastSimulatorConfig.txt
+*.swp
+config/lastTeamConfig.txt
+
