--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,17 +24,17 @@ dist.jar=${dist.dir}/MRESim.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-math3-3.4.1.jar=lib\\commons-math3-3.4.1.jar
-file.reference.jcommon-1.0.17.jar=lib/jcommon-1.0.17.jar
-file.reference.jfreechart-1.0.14.jar=lib/jfreechart-1.0.14.jar
-file.reference.json-20151123.jar=lib\\json-20151123.jar
+file.reference.commons-math3-3.6.1.jar=lib/commons-math3-3.6.1.jar
+file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19.jar
+file.reference.json-20160810.jar=lib/json-20160810.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcommon-1.0.17.jar}:\
-    ${file.reference.jfreechart-1.0.14.jar}:\
-    ${file.reference.commons-math3-3.4.1.jar}:\
-    ${file.reference.json-20151123.jar}
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.json-20160810.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
