ignore every change in config if not forced

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 /dist/
 /build/
 /nbproject/private/
-config/lastEnvironment.png
-config/lastSimulatorConfig.txt
+config/*
 *.swp
-config/lastTeamConfig.txt
 logs/*
 
