--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 application.title=Exploration
 application.vendor=julh
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -67,7 +68,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.license=license4
+project.license=licenseheader
+project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
