random map generation, new perlin noise generator

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-math3-3.6.1.jar=lib/commons-math3-3.6.1.jar
+file.reference.j3d-org-texture_1.1.0.jar=lib/j3d-org-texture_1.1.0.jar
 file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19.jar
 file.reference.json-20160810.jar=lib/json-20160810.jar
@@ -36,7 +37,8 @@ javac.classpath=\
     ${file.reference.commons-math3-3.6.1.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.json-20160810.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.j3d-org-texture_1.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
